[package]
name = "rjg"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Random JSON Generator"
homepage = "https://github.com/sile/rjg"
repository = "https://github.com/sile/rjg"
readme = "README.md"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
